# TIO

./: .env.example  .gitignore  Cargo.toml
config/: development.toml
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: main.rs
crates/client/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: config.rs  errors.rs  lib.rs
crates/database/src/pools/: influxdb.rs  mod.rs  redis.rs  sqlite.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: api_types.rs  errors.rs  lib.rs  ohlcv.rs  symbol.rs  timeframe.rs  validation.rs
doc/: JLM_implementation_phases.md  trading_orchestrator_architecture.md
docker/: docker-compose.yml
python/: requirements.txt
scripts/: run-dev.sh  setup.sh
