[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-router = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"